--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nay Rodrigues - Portfólio Dev</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <!-- já inlcuí o atalho para o css, pq consigo ter um view melhor sobrepondo com o protótipo -->
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
     <header>
@@ -23,7 +24,7 @@
     </header>
     <section class="intro">
         <div class="container">
-            <img src="imagens/perfil.jpg" alt="Nay Rodrigues" class="profile-pic">
+            <img src="https://avatars.githubusercontent.com/u/72886862?v=4" alt="Nay Rodrigues" class="profile-pic">
             <h2>Desenvolvedora Full Stack</h2>
             <p>Especialista em UX/UI Design e desenvolvimento web.</p>
         </div>
