--- a/sobre.html
+++ b/sobre.html
@@ -4,30 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre - Nay Rodrigues</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-        <h1>Sobre Mim</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="projetos.html">Projetos</a></li>
-                <li><a href="daily.html">Daily</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
+    <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="projetos.html">Projetos</a></li>
+                    <li><a href="daily.html">Daily</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <main>
-        <section>
-            <h2>Nay Rodrigues</h2>
-            <p>Sou Nay Rodrigues, uma desenvolvedora full stack em formação pela Coderhouse, apaixonada por design e tecnologia. Atualmente, trabalho na Sarah K Professional como head criativa e estou desenvolvendo meu portfólio dev como projeto final do curso de HTML e CSS.</p>
-            <p>Com um background em Artes Visuais pela PUC Campinas e Design Gráfico pela Unip, estou sempre buscando unir criatividade e tecnologia para criar projetos únicos e inovadores.</p>
-            <p>Além disso, sou mãe do Lucas, um menino incrível de oito anos, e moro em Vinhedo. Minha rotina envolve equilibrar minhas responsabilidades como mãe, profissional e estudante, sempre em busca de me tornar uma profissional bem-sucedida na área de tecnologia.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Nay Rodrigues. Todos os direitos reservados.</p>
+    
+    <section class="about">
+        <div class="container">
+            <h1>Sobre</h1>
+            <p>Meu nome é Nay Rodrigues, sou desenvolvedora full stack com paixão por criar experiências digitais incríveis. Com experiência em design UX/UI e desenvolvimento web, estou comprometida em fornecer soluções que combinam funcionalidade, estética e usabilidade.</p>
+            <p>Minha jornada na tecnologia começou há alguns anos, quando percebi a importância de entender tanto o design quanto o desenvolvimento para criar produtos digitais eficazes. Desde então, tenho trabalhado em diversos projetos que me permitiram crescer e aprender continuamente.</p>
+            <p>Quando não estou codificando, adoro explorar novas tendências de design, aprender sobre novas tecnologias e compartilhar meus conhecimentos com a comunidade.</p>
+        </div>
+    </section>
+    
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 Nay Rodrigues - Todos os direitos reservados.</p>
+        </div>
     </footer>
 </body>
 </html>
