--- a/daily.html
+++ b/daily.html
@@ -4,45 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily - Nay Rodrigues</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-        <h1>Diário de Estudos</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="projetos.html">Projetos</a></li>
-                <li><a href="daily.html">Daily</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
+    <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="projetos.html">Projetos</a></li>
+                    <li><a href="daily.html">Daily</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <main>
-        <section>
-            <h2>Meu Diário de Estudos</h2>
-            <p>Aqui você encontra os vlogs do meu diário de estudos, onde compartilho minha jornada de aprendizado em desenvolvimento full stack.</p>
-            <ul>
-                <li>
-                    <h3>Dia 1 - Introdução ao HTML</h3>
-                    <video controls>
-                        <source src="vlogs/dia1.mp4" type="video/mp4">
-                        Seu navegador não suporta o elemento de vídeo.
-                    </video>
-                </li>
-                <li>
-                    <h3>Dia 2 - Estilizando com CSS</h3>
-                    <video controls>
-                        <source src="vlogs/dia2.mp4" type="video/mp4">
-                        Seu navegador não suporta o elemento de vídeo.
-                    </video>
-                </li>
-                <!-- Adicione mais vídeos conforme necessário -->
-            </ul>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Nay Rodrigues. Todos os direitos reservados.</p>
+    
+    <section class="daily">
+        <div class="container">
+            <h1>Daily</h1>
+            <p>Acompanhe minhas atualizações diárias e descubra mais sobre minha rotina como desenvolvedora full stack.</p>
+            <!-- Conteúdo diário pode ser adicionado aqui -->
+        </div>
+    </section>
+    
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 Nay Rodrigues - Todos os direitos reservados.</p>
+        </div>
     </footer>
 </body>
 </html>
