--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -4,36 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre - Nay Rodrigues</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header bg-dark text-light py-3">
         <div class="container">
-            <nav class="nav">
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="projetos.html">Projetos</a></li>
-                    <li><a href="daily.html">Daily</a></li>
-                    <li><a href="contato.html">Contato</a></li>
+            <nav class="nav justify-content-center">
+                <ul class="nav">
+                    <li class="nav-item"><a class="nav-link text-light" href="../index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-light" href="sobre.html">Sobre</a></li>
+                    <li class="nav-item"><a class="nav-link text-light" href="projetos.html">Projetos</a></li>
+                    <li class="nav-item"><a class="nav-link text-light" href="daily.html">Daily</a></li>
+                    <li class="nav-item"><a class="nav-link text-light" href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     
-    <section class="about">
+    <section class="about py-5">
         <div class="container">
-            <h1>Sobre</h1>
-            <p>Meu nome é Nay Rodrigues, sou desenvolvedora full stack com paixão por criar experiências digitais incríveis. Com experiência em design UX/UI e desenvolvimento web, estou comprometida em fornecer soluções que combinam funcionalidade, estética e usabilidade.</p>
+            <h1 class="text-center mb-4">Sobre</h1>
+            <p class="lead">Meu nome é Nay Rodrigues, sou desenvolvedora full stack com paixão por criar experiências digitais incríveis. Com experiência em design UX/UI e desenvolvimento web, estou comprometida em fornecer soluções que combinam funcionalidade, estética e usabilidade.</p>
             <p>Minha jornada na tecnologia começou há alguns anos, quando percebi a importância de entender tanto o design quanto o desenvolvimento para criar produtos digitais eficazes. Desde então, tenho trabalhado em diversos projetos que me permitiram crescer e aprender continuamente.</p>
             <p>Quando não estou codificando, adoro explorar novas tendências de design, aprender sobre novas tecnologias e compartilhar meus conhecimentos com a comunidade.</p>
         </div>
     </section>
     
-    <footer class="footer">
-        <div class="container">
+    <footer class="footer bg-dark text-light py-3">
+        <div class="container text-center">
             <p>&copy; 2024 Nay Rodrigues - Todos os direitos reservados.</p>
         </div>
     </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
