--- a/pages/daily.html
+++ b/pages/daily.html
@@ -4,35 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily - Nay Rodrigues</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header bg-dark text-light py-3">
         <div class="container">
-            <nav class="nav">
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="projetos.html">Projetos</a></li>
-                    <li><a href="daily.html">Daily</a></li>
-                    <li><a href="contato.html">Contato</a></li>
+            <nav class="nav justify-content-center">
+                <ul class="nav">
+                    <li class="nav-item"><a class="nav-link text-light" href="../index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-light" href="sobre.html">Sobre</a></li>
+                    <li class="nav-item"><a class="nav-link text-light" href="projetos.html">Projetos</a></li>
+                    <li class="nav-item"><a class="nav-link text-light" href="daily.html">Daily</a></li>
+                    <li class="nav-item"><a class="nav-link text-light" href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     
-    <section class="daily">
+    <section class="daily py-5">
         <div class="container">
-            <h1>Daily</h1>
-            <p>Acompanhe minhas atualizações diárias e descubra mais sobre minha rotina como desenvolvedora full stack.</p>
+            <h1 class="text-center mb-4">Daily</h1>
+            <p class="lead text-center">Acompanhe minhas atualizações diárias e descubra mais sobre minha rotina como desenvolvedora full stack.</p>
             <!-- Conteúdo diário pode ser adicionado aqui -->
         </div>
     </section>
     
-    <footer class="footer">
-        <div class="container">
+    <footer class="footer bg-dark text-light py-3">
+        <div class="container text-center">
             <p>&copy; 2024 Nay Rodrigues - Todos os direitos reservados.</p>
         </div>
     </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
