--- a/pages/contato.html
+++ b/pages/contato.html
@@ -4,40 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - Nay Rodrigues</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header bg-dark text-light py-3">
         <div class="container">
-            <nav class="nav">
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="projetos.html">Projetos</a></li>
-                    <li><a href="daily.html">Daily</a></li>
-                    <li><a href="contato.html">Contato</a></li>
+            <nav class="nav justify-content-center">
+                <ul class="nav">
+                    <li class="nav-item"><a class="nav-link text-light" href="../index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-light" href="sobre.html">Sobre</a></li>
+                    <li class="nav-item"><a class="nav-link text-light" href="projetos.html">Projetos</a></li>
+                    <li class="nav-item"><a class="nav-link text-light" href="daily.html">Daily</a></li>
+                    <li class="nav-item"><a class="nav-link text-light" href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     
-    <section class="contact">
+    <section class="contact py-5">
         <div class="container">
-            <h1>Contato</h1>
-            <p>Entre em contato comigo para discutir como posso ajudar no seu próximo projeto.</p>
-            <form>
-                <input type="text" placeholder="Nome" required>
-                <input type="email" placeholder="Email" required>
-                <textarea placeholder="Mensagem" required></textarea>
-                <button type="submit">Enviar</button>
-            </form>
-        </div>
-    </section>
-    
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2024 Nay Rodrigues - Todos os direitos reservados.</p>
-        </div>
-    </footer>
-</body>
-</html>
+            <h1 class="text-center mb-4">Contato</h1>
+            <p class="lead text-center">Entre em contato comigo para discutir como posso ajudar no seu próximo projeto.</p>
+            <form class="mt-4">
+                <div class="mb-3">
+                    <input type
