--- a/pages/contato.html
+++ b/pages/contato.html
@@ -29,4 +29,26 @@
             <p class="lead text-center">Entre em contato comigo para discutir como posso ajudar no seu próximo projeto.</p>
             <form class="mt-4">
                 <div class="mb-3">
-                    <input type
+                    <input type="text" class="form-control" placeholder="Nome" required>
+                </div>
+                <div class="mb-3">
+                    <input type="email" class="form-control" placeholder="Email" required>
+                </div>
+                <div class="mb-3">
+                    <textarea class="form-control" placeholder="Mensagem" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-dark btn-lg">Enviar</button>
+            </form>
+        </div>
+    </section>
+    
+    <footer class="footer bg-dark text-light py-3">
+        <div class="container text-center">
+            <p>&copy; 2024 Nay Rodrigues - Todos os direitos reservados.</p>
+        </div>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
