--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Sobre</a>
+                                <a class="nav-link" href="sobre.html">Sobre</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Projetos</a>
+                                <a class="nav-link" href="projetos.html">Projetos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contato</a>
+                                <a class="nav-link" href="contato.html">Contato</a>
                             </li>
                         </ul>
                     </div>
